<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Card_RestaurantCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="@color/cardBG"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                tools:text="Cairo" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:textColor="@color/textDark"
                android:textSize="32sp"
                tools:text="25" />

            <TextView
                android:id="@+id/celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_toEndOf="@id/temp"
                android:text="@string/Celsius"
                android:textColor="@color/textDark"
                android:textSize="18sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/humLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Humidity"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:id="@+id/hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/humLab"
                android:layout_toEndOf="@id/humLab"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium"
                tools:text="83" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/humLab"
                android:layout_toEndOf="@id/hum"
                android:text="@string/percentage"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:id="@+id/windLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/humLab"
                android:layout_marginTop="15dp"
                android:text="@string/Wind"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windLab"
                android:layout_toEndOf="@id/windLab"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium"
                tools:text="9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windLab"
                android:layout_toEndOf="@id/windSpeed"
                android:text="@string/speedMeasurement"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:id="@+id/windDegLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/windLab"
                android:layout_marginTop="15dp"
                android:text="@string/Wind_Direction"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:id="@+id/windDeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windDegLab"
                android:layout_below="@id/windLab"
                android:layout_toEndOf="@id/windDegLab"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium"
                tools:text="340" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windDegLab"
                android:layout_below="@id/windLab"
                android:layout_toEndOf="@id/windDeg"
                android:text="@string/degree"
                android:textColor="@color/textLight"
                android:textSize="@dimen/textMedium" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>